--- a/credits.html
+++ b/credits.html
@@ -275,14 +275,14 @@ body {
         <ul>
         <li style="font-size: 120%;">Throughout the weeks we worked on setting goals and accomplishing it at the end of the week</li>
         <li style="font-size: 110%;">1. We all worked on the game logic </li>
-        <li style="font-size: 110%;">2. Fahim and Gaurav focused on socket.io </li>
-        <li style="font-size: 110%;">3. Brenden and Hasan focused on the Database and Server </li>
+        <li style="font-size: 110%;">2. Jaden and Gaurav focused on socket.io </li>
+        <li style="font-size: 110%;">3. Jaden and Hasan focused on the Database and Server </li>
         <li style="font-size: 110%;">4. Fahim,Vishan and Gaurav worked on the final map, while Brenden worked on the prototype map</li>
         <li style="font-size: 110%;">5. Vishan did the footer of the page, and power-ups and helped with game logic</li>
         <li style="font-size: 110%;">6. Fahim worked on image sprites, Brenden finished the HTML,CSS of the main html pages</li>
-        <li style="font-size: 110%;">7. Hasan worked on the server side maintenance and completed hosting the <a href="https://lightsandshadows.herokuapp.com/">game</a></li>
-        <li style="font-size: 110%;">8. Gaurav worked on Game physics with help from Fahim and Vishan to complete</li>
-        <li style="font-size: 110%;">9. Gaurav worked on making the game where it is and what it is,thank you Gauva boi</li>
+        <li style="font-size: 110%;">7. Hasan worked on the server side maintenance and completed hosting the <a href="https://jaydenxp.com/">game</a></li>
+        <li style="font-size: 110%;">8. Jaden worked on Game physics with help from Fahim and Vishan to complete</li>
+        <li style="font-size: 110%;">9. Jaden worked on making the game where it is and what it is,thank you Gauva boi</li>
 
     </ul>
 
@@ -315,7 +315,7 @@ body {
           <h1>Contact Us</h1>
           <div class="contact">
             <span><i class="fa fa-phone"></i> &nbsp; 0506234176</span>
-            <span><i class="fa fa-envelope"></i> &nbsp; lights&shadows@protonmail.com</span>
+            <span><i class="fa fa-envelope"></i> &nbsp; Jaden@jaydenxp.com</span>
           </div>
           <div class="socials">
             <a href="#"><i class="fa fa-facebook"></i></a>
